--- a/views/accountTitles/index.ejs
+++ b/views/accountTitles/index.ejs
@@ -12,113 +12,143 @@ AT-01
 
 <%- contentFor('body') %>
 
-<div class="search mb-3 searchAccountTitle">
-    <form method="post">
-        <%- include('../common/master/_hidden') %>
+<div class="card">
+    <div class="card-body">
+        <div class="toolbar">
+            <!--        Here you can write extra buttons/actions for the toolbar              -->
+            <a class="btn btn-primary" role="button" href="/accountTitles/accountTitleCategory/new">
+                <i class="material-icons">add</i>科目分類登録</a>
+            <a class="btn btn-primary" role="button" href="/accountTitles/accountTitleSet/new">
+                <i class="material-icons">add</i>科目登録</a>
 
-        <div class="form-group">
-            <label for="inCodeSet[inCodeSet][codeValue]" class="">
-                科目分類
-            </label>
-            <select class="form-control" name="inCodeSet[inCodeSet][codeValue]">
-                <option value="">選択してください</option>
-                <% for (const accountTitleCategory of accountTitleCategories) { %>
-                <option value="<%= accountTitleCategory.codeValue %>">
-                    <%= accountTitleCategory.codeValue %>
-                    <%= accountTitleCategory.name %>
-                </option>
-                <% } %>
-            </select>
+            <a class="btn btn-primary" href="/accountTitles/new">
+                <i class="material-icons">add</i>登録</a>
+            <a class="btn btn-primary search btn-ok" href="#">
+                <i class="material-icons">refresh</i>更新</a>
         </div>
-        <div class="form-group">
-            <label for="inCodeSet[codeValue]" class="">
-                科目
-            </label>
-            <select class="form-control" name="inCodeSet[codeValue]">
-                <option value="">選択してください</option>
-                <% for (const accountTitleSet of accountTitleSets) { %>
-                <option value="<%= accountTitleSet.codeValue %>">
-                    <%= accountTitleSet.codeValue %>
-                    <%= accountTitleSet.name %>
-                </option>
-                <% } %>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="codeValue" class="">
-                細目コード
-            </label>
-            <input type="text" class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64
-                value="">
-        </div>
+        <div class="material-datatables">
+            <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <form method="post">
+                            <%- include('../common/master/_hidden') %>
 
-        <a class="btn btn-primary" role="button" href="/accountTitles/accountTitleCategory/new">
-            <i class=" fa fa-plus"></i> 科目分類登録</a>
-        <a class="btn btn-primary" role="button" href="/accountTitles/accountTitleSet/new">
-            <i class=" fa fa-plus"></i> 科目登録</a>
-        <a class="btn btn-primary" role="button" href="/accountTitles/new">
-            <i class=" fa fa-plus"></i> 細目登録</a>
-
-        <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
-    </form>
-</div>
-
-<div class="search">
-    <div id="list" style="display:none;">
-        <table class="table table-bordered table-striped mb-0">
-            <thead>
-                <tr>
-                    <th>科目分類コード</th>
-                    <th>科目分類名称</th>
-                    <th>科目コード</th>
-                    <th>科目名称</th>
-                    <th>細目コード</th>
-                    <th>細目名称</th>
-                    <th>科目区分</th>
-                    <th>科目区分名</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr id="templateRow" codeValue="$codeValue$">
-                    <td name="inCodeSet.inCodeSet.codeValue">
-                        <a class="editAccountTitleCategory"
-                            href="javascript:void(0)">$inCodeSet.inCodeSet.codeValue$</a>
-                    </td>
-                    <td name="inCodeSet.inCodeSet.name">$inCodeSet.inCodeSet.name$</td>
-                    <td name="inCodeSet.codeValue">
-                        <a class="editAccountTitleSet" href="javascript:void(0)">$inCodeSet.codeValue$</a>
-                    </td>
-                    <td name="inCodeSet.name">$inCodeSet.name$</td>
-                    <td name="codeValue"><a class="editAccountTitle" href="javascript:void(0)">$codeValue$</a></td>
-                    <td name="name">$name$</td>
-                    <td name="inCodeSet.inDefinedTermSet.termCode">$inCodeSet.inDefinedTermSet.termCode$</td>
-                    <td name="inCodeSet.inDefinedTermSet.name">$inCodeSet.inDefinedTermSet.name$</td>
-                    <td name="edit__codeValue">
-                        <div class="text-center mt-2">
-                            <a href="javascript:void(0)" class="btn btn-sm btn-outline-primary showAdditionalProperty"
-                                data-codeValue="$codeValue$">
-                                <span>追加特性</span>
-                            </a>
+                            <div class="form-row">
+                                <div class="form-group bmd-form-group col-md-3">
+                                    <label for="inCodeSet[inCodeSet][codeValue]" class="bmd-label-static">
+                                        科目分類
+                                    </label>
+                                    <select class="form-control" name="inCodeSet[inCodeSet][codeValue]">
+                                        <option value="">選択してください</option>
+                                        <% for (const accountTitleCategory of accountTitleCategories) { %>
+                                        <option value="<%= accountTitleCategory.codeValue %>">
+                                            <%= accountTitleCategory.codeValue %>
+                                            <%= accountTitleCategory.name %>
+                                        </option>
+                                        <% } %>
+                                    </select>
+                                </div>
+                                <div class="form-group bmd-form-group col-md-3">
+                                    <label for="inCodeSet[codeValue]" class="bmd-label-static">
+                                        科目
+                                    </label>
+                                    <select class="form-control" name="inCodeSet[codeValue]">
+                                        <option value="">選択してください</option>
+                                        <% for (const accountTitleSet of accountTitleSets) { %>
+                                        <option value="<%= accountTitleSet.codeValue %>">
+                                            <%= accountTitleSet.codeValue %>
+                                            <%= accountTitleSet.name %>
+                                        </option>
+                                        <% } %>
+                                    </select>
+                                </div>
+                                <div class="form-group bmd-form-group col-md-3">
+                                    <label for="codeValue" class="bmd-label-static">
+                                        細目コード
+                                    </label>
+                                    <input type="text" class="form-control" name="codeValue" id="codeValue"
+                                        placeholder="" maxlength=64 value="">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div id="list" style="display:none;" class="row">
+                    <div class="col-sm-12 table-responsive">
+                        <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
+                            cellspacing="0" width="100%" style="width: 100%;" role="grid"
+                            aria-describedby="datatables_info">
+                            <thead class="text-primary">
+                                <tr>
+                                    <th>科目分類コード</th>
+                                    <th>科目分類名称</th>
+                                    <th>科目コード</th>
+                                    <th>科目名称</th>
+                                    <th>細目コード</th>
+                                    <th>細目名称</th>
+                                    <th>科目区分</th>
+                                    <th>科目区分名</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr id="templateRow" codeValue="$codeValue$">
+                                    <td name="inCodeSet.inCodeSet.codeValue">
+                                        <a class="editAccountTitleCategory"
+                                            href="javascript:void(0)">$inCodeSet.inCodeSet.codeValue$</a>
+                                    </td>
+                                    <td name="inCodeSet.inCodeSet.name">$inCodeSet.inCodeSet.name$</td>
+                                    <td name="inCodeSet.codeValue">
+                                        <a class="editAccountTitleSet"
+                                            href="javascript:void(0)">$inCodeSet.codeValue$</a>
+                                    </td>
+                                    <td name="inCodeSet.name">$inCodeSet.name$</td>
+                                    <td name="codeValue"><a class="editAccountTitle"
+                                            href="javascript:void(0)">$codeValue$</a></td>
+                                    <td name="name">$name$</td>
+                                    <td name="inCodeSet.inDefinedTermSet.termCode">$inCodeSet.inDefinedTermSet.termCode$
+                                    </td>
+                                    <td name="inCodeSet.inDefinedTermSet.name">$inCodeSet.inDefinedTermSet.name$</td>
+                                    <td name="edit__codeValue">
+                                        <div class="text-center mt-2">
+                                            <a href="javascript:void(0)"
+                                                class="btn btn-sm btn-outline-primary showAdditionalProperty"
+                                                data-codeValue="$codeValue$">
+                                                <span>追加特性</span>
+                                            </a>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-5">
+                        <div class="dataTables_info" id="datatables_info" role="status" aria-live="polite">
                         </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <div id="pager" class="div_pager_parent"></div>
+                    </div>
+                    <div class="col-sm-12 col-md-7">
+                        <div class="dataTables_paginate paging_full_numbers" id="datatables_paginate">
+                        </div>
+                        <div id="pager" class="div_pager_parent float-right"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
 
-<div class="modal fade" id="modal-additionalProperty" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">細目の追加特性</h4>
-            </div>
-            <div class="modal-body">
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+    <div class="modal fade" id="modal-additionalProperty" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">追加特性</h4>
+                </div>
+                <div class="modal-body">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+                </div>
             </div>
         </div>
     </div>
