--- a/views/accountTitles/accountTitleCategory/form.ejs
+++ b/views/accountTitles/accountTitleCategory/form.ejs
@@ -1,27 +1,39 @@
-<% /* 科目分類コード */ %>
-<div class="form-group">
-    <label for="codeValue" class="">
-        科目分類コード<span class="text-danger">＊</span>
-    </label>
-    <input class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64
-        value="<%= forms.codeValue %>" <% if (!isNew) { %> readonly <% } %>>
-    <p class="message">半角64文字以内でご入力ください。</p>
-    <p class="error message text-danger">
-        <% if (errors && errors['codeValue']) { %>
-        <%- errors['codeValue'].msg %>
-        <% } %>
-    </p>
-</div>
+<div class="card">
+    <div class="card-header card-header-primary card-header-text">
+        <div class="card-text">
+            <h4 class="card-title">基本設定</h4>
+        </div>
+    </div>
 
-<div class="form-group">
-    <label for="name" class="">
-        科目分類名称<span class="text-danger">＊</span>
-    </label>
-    <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
-    <p class="message">64文字以内でご入力ください。</p>
-    <p class="error message text-danger">
-        <% if (errors && errors['name']) { %>
-        <%- errors['name'].msg %>
-        <% } %>
-    </p>
+    <div class="card-body">
+
+        <% /* 科目分類コード */ %>
+        <div class="form-group">
+            <label for="codeValue" class="">
+                科目分類コード<span class="text-danger">＊</span>
+            </label>
+            <input class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64
+                value="<%= forms.codeValue %>" <% if (!isNew) { %> readonly <% } %>>
+            <p class="message">半角64文字以内でご入力ください。</p>
+            <p class="error message text-danger">
+                <% if (errors && errors['codeValue']) { %>
+                <%- errors['codeValue'].msg %>
+                <% } %>
+            </p>
+        </div>
+
+        <div class="form-group">
+            <label for="name" class="">
+                科目分類名称<span class="text-danger">＊</span>
+            </label>
+            <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
+            <p class="message">64文字以内でご入力ください。</p>
+            <p class="error message text-danger">
+                <% if (errors && errors['name']) { %>
+                <%- errors['name'].msg %>
+                <% } %>
+            </p>
+        </div>
+    </div>
 </div>
+<!-- end card -->
